--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>post detail</title>
 </head>
 <body>
-<div class="post-entry">
-<h2>{{ post.title }}</h2>
-<p>{{ post.body }}</p> </div>
+    {% extends "base.html" %}
+    {% block content %}
+    <div class="post-entry">
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.body }}</p>
+    </div>
+
+    <p>
+        <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a>
+    </p>
+
+    <p>
+        <a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a>
+    </p>
+    {% endblock content %}
 </body>
 </html>
