added forms for registration, authorization and accounts

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,18 +7,24 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
 </head>
 <body>
-<header>
-    <div class="nav-left">
-        <h1>
-            <a href="{% url 'home' %}">Django blog</a>
-        </h1>
-    </div>
-    <div class="nav-right">
-        <a href="{% url 'post_new' %}">Add Post</a>
-    </div>
-</header>
 <div>
-      {% block content %}
+    <header>
+        <div class="nav-left">
+            <h1><a href="{% url 'home' %}">Django blog</a></h1>
+        </div>
+        <div class="nav-right">
+            <a href="{% url 'post_new' %}">Add Post</a>
+        </div>
+    </header>
+     {% if user.is_authenticated %}
+    <p>Hi {{ user.username }}!</p> {% else %}
+    <p>You are not logged in.</p>
+    <a href="{% url 'login' %}">Log In</a> {% endif %}
+    {% if user.is_authenticated %}
+    <p><a href="{% url 'logout' %}">Log out</a></p>
+    {% else %}
+    {% endif %}
+    {% block content %}
     {% endblock content %}
 </div>
 </body>
